infrastructure/base/configs/cilium/deny-all-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: workloads
spec:
  endpointSelector: {}
  ingressDeny:
    # Deny all ingress traffic
    - fromEntities:
        - all
