infrastructure/base/configs/cilium/deny-all-workloads.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-workloads
  namespace: workloads
spec:
  endpointSelector: {}
  ingressDeny:
    # Deny all ingress traffic
    - fromEntities:
        - all
  # egressDeny:
  #   # Deny all egress traffic
  #   - toEntities:
  #       - all
